lint warning fix